--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 .hero {
-    background: url('./img/bg01.png') no-repeat center center/cover;
+    background: url('https://s.sprunkiincredibox.com/img/bg01.png') no-repeat center center/cover;
     height: 60vh;
     display: flex;
     align-items: center;
