添加mod页面，以及修改模板

--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,11 @@
     <meta name="description" content="网页描述，包含关键词和吸引人的内容。">
     <script src="../tailwind.js"></script>
     <link rel="stylesheet" href="../tailwind.css">
+    <link rel="canonical" href="https://sprunkiincredibox.com/template/"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://s.sprunkiincredibox.com/img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico"/>
 </head>
 
 <body class="bg-gradient-to-r from-gray-100 to-gray-200 text-gray-800 font-sans leading-relaxed">
